feature:added upload picture feature and added css

--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -237,3 +237,9 @@ border-radius: 3%;
   font-size: 20px;
   padding: -10em;
 }
+.genres{
+  display: flex;
+  flex-direction: column;
+  flex-direction: wrap;
+  justify-content: space-evenly;
+}
