--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Tinos&display=swap');
 *{
   font-family: 'Quicksand', sans-serif;
 }
@@ -101,6 +102,7 @@ flex-direction: column;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #fcbcdb;
 }
 .searchBar{
   display: block;
@@ -128,7 +130,7 @@ flex-direction: column;
   display: block;
   width:225px;
   height:40px;
-background-color: rgb(153, 178, 189);
+/* background-color: #e03166; */
 border-radius: 3%;
   margin:10px;
   font-family: 'Raleway', sans-serif;
@@ -200,6 +202,8 @@ position: relative;
 .title{
   font-family: 'Quicksand', sans-serif;
   text-align: start;
+  font-size: 25px;
+  color: black;
 }
 
 
@@ -211,7 +215,8 @@ position: relative;
 .jolly-btn{
   --background: #485563; /* fallback for old browsers */
   --background: -webkit-linear-gradient(to right, #485563, #29323c); /* Chrome 10-25, Safari 5.1-6 */
-  --background: linear-gradient(to right, #485563, #29323c)
+  --background: linear-gradient(to right, #485563, #29323c);
+  color:white
 
 }
 
@@ -252,3 +257,10 @@ border-radius: 3%;
 a{
   text-decoration: none;
 }
+.ion-item-border {
+  border-radius: 20px !important;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  }
