--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,19 +4,19 @@ http://ionicframework.com/docs/theming/ */
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: rgb(184, 152, 202);
   --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast: black;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary: #3a77f3;
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
+  --ion-color-secondary-shade: #4c8dff;
   --ion-color-secondary-tint: #24d6ea;
 
   /** tertiary **/
@@ -24,7 +24,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-tertiary-rgb: 112, 68, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #633ce0;
+  --ion-color-tertiary-shade: #7044ff;
   --ion-color-tertiary-tint: #7e57ff;
 
   /** success **/
@@ -36,12 +36,12 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-success-tint: #28e070;
 
   /** warning **/
-  --ion-color-warning: #ffce00;
+  --ion-color-warning: none;
   --ion-color-warning-rgb: 255, 206, 0;
   --ion-color-warning-contrast: #ffffff;
   --ion-color-warning-contrast-rgb: 255, 255, 255;
-  --ion-color-warning-shade: #e0b500;
-  --ion-color-warning-tint: #ffd31a;
+  --ion-color-warning-shade: white;
+  --ion-color-warning-tint: white;
 
   /** danger **/
   --ion-color-danger: #f04141;
@@ -75,3 +75,22 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
+/* ion-tab-bar{
+
+  --ion-background-color:#fcbcdb;
+
+} */
+ion-tab-bar{
+
+  --ion-background-color:#fcbcdb;
+
+}
+ion-header {
+  --ion-background-color:#fcbcdb;
+}
+ion-list{
+  --ion-background-color:#f3d2d1;
+
+}
+/* }
+#f4f1ec */
