--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -264,3 +264,54 @@ a{
   padding-bottom: 5px;
   padding-top: 5px;
   }
+.chatBox{
+  /* display: flex;
+  flex-direction: column; */
+  margin: 15px;
+
+  /* overflow-y:auto; */
+
+
+
+}
+.entry{
+  /* transform: translateY(100%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: fixed; */
+  position:fixed;
+  bottom:0px;
+  width:90%;
+  margin-bottom: 10px;
+}
+
+.messageEntry{
+  display:flex;
+  flex-direction:column;
+  align-items: flex-start;
+  font-family: 'Raleway', sans-serif;
+  margin-bottom: 0px;
+
+}
+.messageEntry .items{
+  display:flex;
+   flex-direction:row;
+   align-items: center;
+}
+.messageEntry .items img{
+
+  display: block;
+  max-width:50px;
+  max-height:50px;
+  width: auto;
+  height: auto;
+  border-radius: 100px;
+}
+.allMessages{
+  position: fixed;
+  overflow: scroll;
+max-height: 80%
+
+}
