--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -295,17 +295,6 @@ a{
    align-items: center;
 }
 .messageEntry .items img{
-/*
-  display: block;
-  position: relative;
-  left:-10px;
-  max-width:25%;
-  max-height:25%;
-  width: auto;
-  height: auto;
-  border-radius: 50px;
-
-  margin-bottom: 10px; */
   position: relative;
   width: 60px;
   height: 60px;
@@ -322,9 +311,35 @@ a{
   background-position: center center;
 
 }
+.profilIMG{
+
+  max-width: '80%';
+  max-height: '80%';
+  -webkit-border-radius: 5px;
+width: auto;
+height: auto;
+  -moz-border-radius: 5px;
+
+  border-radius: 5px;
+
+  margin-top: 10px;
+
+
+
+
+}
 .allMessages{
   position: fixed;
   overflow: scroll;
 max-height: 82%
 
+}
+.venueImg{
+  margin:10px;
+  display: block;
+  max-width:380px;
+  max-height:300px;
+  width: auto;
+  height: auto;
+  border-radius: 0%;
 }
